--- a/tmp2.ipynb
+++ b/tmp2.ipynb
@@ -9,16 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
     "\n",
-    "def genius_search(search):\n",
+    "def genius_search(search,GENIUS_API_KEY):\n",
     "    # Genius API Key\n",
-    "    GENIUS_API_KEY = \"I_rUwBLI1_wEjXSvfEsyHeFK2Bj0V28EG9_6h6FFKR-3rSyGCj8kKWTN7jPmCtcx\"\n",
+    "    GENIUS_API_KEY = GENIUS_API_KEY\n",
     "\n",
     "    # API 요청을 위한 엔드포인트\n",
     "    base_url = \"https://api.genius.com\"\n",
@@ -104,7 +104,7 @@
     "import pandas as pd\n",
     "def get_lyric(ID):\n",
     "    # Genius API Key\n",
-    "    GENIUS_API_KEY = \"I_rUwBLI1_wEjXSvfEsyHeFK2Bj0V28EG9_6h6FFKR-3rSyGCj8kKWTN7jPmCtcx\"\n",
+    "    GENIUS_API_KEY = \"U8Bj95uLfXFHnAkwYV67p1a5tdzmJD7vQSKWMGxi_w_BekWl_gMSLb7sRwl-rI5gqwop8gawaDjzF1mqyYl-6A\"\n",
     "\n",
     "    # 노래 제목\n",
     "    ID = ID\n",
@@ -307,6 +307,146 @@
     "        return lyrics\n",
     "    else:\n",
     "        return '페이지를 가져올 수 없습니다.'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup\n",
+    "GENIUS_API_KEY = \"6_Qvih8nVAJPwcO9_mRstBxlukq7uAVwXbJDTPmzMYG_ojCWZmbSdaLph4mpgycU\"\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "def normalize(url):\n",
+    "    if \"Genius-romanizations-\" in url:\n",
+    "        new_url = url.replace(\"Genius-romanizations-\",\"\")\n",
+    "        new_url = new_url.replace(\"romanized-\",\"\")\n",
+    "        return new_url\n",
+    "    else:\n",
+    "        return url\n",
+    "        \n",
+    "def genius_search(search,GENIUS_API_KEY):     # 노래 id 및 기본 정보 수집\n",
+    "    \n",
+    "    GENIUS_API_KEY = GENIUS_API_KEY\n",
+    "\n",
+    "\n",
+    "    base_url = \"https://api.genius.com\"\n",
+    "    headers = {\"Authorization\": \"Bearer \" + GENIUS_API_KEY}\n",
+    "\n",
+    "\n",
+    "    search = search\n",
+    "    search_url = f\"{base_url}/search?q={search}\"\n",
+    "\n",
+    "\n",
+    "    response = requests.get(search_url, headers=headers)\n",
+    "    data = response.json()\n",
+    "\n",
+    "\n",
+    "    if \"response\" in data and \"hits\" in data[\"response\"]:\n",
+    "        hits = data[\"response\"][\"hits\"]\n",
+    "        if hits:\n",
+    "            col = [\"ID\",\"Title\",\"artist_names\",\"pyongs_count\"]\n",
+    "            a=[]\n",
+    "            for i in data['response']['hits']:\n",
+    "                a.append([i['result']['id'],i['result']['title'],i['result']['artist_names'],i['result']['pyongs_count']])\n",
+    "            return pd.DataFrame(a,columns=col)\n",
+    "    else:\n",
+    "        return \"검색 결과를 찾을 수 없습니다.\"\n",
+    "    \n",
+    "    \n",
+    "def get_lyric(ID,GENIUS_API_KEY):   # 가사 주소 및 앨범 정보 수집\n",
+    "    # Genius API Key\n",
+    "    GENIUS_API_KEY = GENIUS_API_KEY\n",
+    "\n",
+    "    # 노래 제목\n",
+    "    ID = ID\n",
+    "\n",
+    "    # 검색 요청 보내기\n",
+    "    search_url = f\"https://api.genius.com/songs/{ID}\"\n",
+    "    headers = {\"Authorization\": f\"Bearer {GENIUS_API_KEY}\"}\n",
+    "    response = requests.get(search_url, headers=headers)\n",
+    "    data = response.json()\n",
+    "    return data\n",
+    "    # data['response']['song']['album']['full_title']\n",
+    "    \n",
+    "\n",
+    "def genius_lyric_search(url):   # 가사 크롤링\n",
+    "    url = url\n",
+    "\n",
+    "    response = requests.get(url)\n",
+    "\n",
+    "    if response.status_code == 200:\n",
+    "        page_content = response.content\n",
+    "        soup = BeautifulSoup(page_content, 'html.parser')\n",
+    "\n",
+    "        lyrics_containers = soup.find_all('div', class_='Lyrics__Container-sc-1ynbvzw-5')\n",
+    "\n",
+    "        lyrics_list = []\n",
+    "\n",
+    "        for container in lyrics_containers:\n",
+    "            lyrics_list.extend(container.stripped_strings)\n",
+    "\n",
+    "        lyrics = '\\n'.join(lyrics_list)\n",
+    "        return lyrics\n",
+    "    else:\n",
+    "        return '페이지를 가져올 수 없습니다.'\n",
+    "    \n",
+    "def genius_unique_search(search, GENIUS_API_KEY):   # 종합\n",
+    "    GENIUS_API_KEY = GENIUS_API_KEY\n",
+    "    \n",
+    "    # 노래 id 및 기본 정보\n",
+    "    genius_search_data = genius_search(search, GENIUS_API_KEY)\n",
+    "    ID = genius_search_data.loc[0][0]\n",
+    "    ARTIST = genius_search_data.loc[0][2]\n",
+    "    TITEL = genius_search_data.loc[0][1]\n",
+    "    \n",
+    "    # 가사 주소 및 앨범\n",
+    "    get_lyric_data = get_lyric(ID, GENIUS_API_KEY)['response']['song']\n",
+    "    LYIRC_URL = get_lyric_data['url']\n",
+    "    LYIRC_URL = normalize(LYIRC_URL)\n",
+    "    if get_lyric_data['album'] != None:\n",
+    "        ALBUM = get_lyric_data['album']['name']\n",
+    "    \n",
+    "        #크롤링\n",
+    "        LYRIC = genius_lyric_search(LYIRC_URL)\n",
+    "        return (ID,ARTIST, TITEL, LYIRC_URL, ALBUM, LYRIC)\n",
+    "    else:\n",
+    "        LYRIC = genius_lyric_search(LYIRC_URL)\n",
+    "        return (ID,ARTIST, TITEL, LYIRC_URL, LYRIC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data =genius_unique_search(\"소녀시대, HAERT\",GENIUS_API_KEY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[소녀시대 \"Lion Heart\" 가사]\\n[Verse 1: Taeyeon,\\nSooyoung\\n]\\nOoh, 너와 너 처음 만났을때\\nOoh, 마치 사자처럼 맴돌아\\n기회를 노려내 맘빼신 너\\n아, 넌 달라진 게 없어, 여전히\\n난 애가 타고 또 타\\n사냥감 찾아 한눈 파는 너\\n[Pre-Chorus: Yoona]\\n수백번 밀어내야 해는데 (Ooh)\\n수천번 널 떠나야 해는대\\n[Chorus: All,\\nTiffany\\n,\\nSeohyun\\n]\\nTell me why\\n왜 맘이 맘이 자꾸 흔들리니\\n난 여기 여기 네 옆에 있잖니\\n정신 차려 lion heart\\n난 애가 타\\n내 맘이 맘이 더는 식지 않게\\n난 여기저기 뛰노는 너의 맘\\n길들일래 lion heart\\n[Post-Chorus: All]\\nOh-oh-oh, oh-oh-oh-oh-oh\\nOh-oh-oh, oh-oh-oh-oh-oh\\n[Verse 2: Sunny]\\nOoh, 넌 자유로운 영혼 여전해\\n충실해 본능 앞에\\n지금 네 옆에 난 안 보이니\\n[Pre-Chorus: Hyoyeon]\\n수백 번 고민 고민해봐도\\n수천 번 결국 답은 너인데\\n[Chorus: All,\\nYuri\\n,\\nTaeyeon\\n]\\nTell me why\\n왜 맘이 맘이 자꾸 흔들리니\\n난 여기 여기 네 옆에 있잖니\\n정신 차려 lion heart\\n난 애가 타\\n내 맘이 맘이 더는 식지 않게\\n난 여기저기 뛰노는 너의 맘\\n길들일래 lion heart\\n[Bridge: All,\\nSooyoung & Yoona\\n,\\nHyoyeon & Yuri\\n]\\nOh-oh-oh, oh-oh-oh-oh-oh (큰일 났어)\\nOh-oh-oh, oh-oh-oh-oh-oh (큰일 났어)\\n곤히 잠자는 나의 코끝을, baby\\nOh-oh-oh, oh-oh-oh-oh-oh (큰일 났어)\\nOh-oh-oh, oh-oh-oh-oh-oh (혼 좀 나 볼래)\\n네가 건드려 나도 화가 나, baby\\n[Chorus: All,\\nTiffany\\n,\\nSeohyun\\n,\\nTaeyeon\\n, *\\nSunny\\n*, **\\nTaeyeon & Sunny\\n**]\\nTell me why (\\nBaby, why\\n)\\n왜 맘이 맘이 자꾸 흔들리니\\n(\\n자꾸 흔들리니, 리니\\n)\\n난 여기 여기 네 옆에 있잖니\\n(\\nWhoa\\n)\\n정신 차려 lion heart\\n(\\nOh, 정신 차려 lion heart, yeah, yeah\\n)\\n난 애가 타\\n*\\n내 맘이 맘이 더는 식지 않게\\n* (\\n내 맘이 맘이 더는 식지 않게, 않게\\n)\\n*\\n난 여기저기 뛰노는 너의 맘\\n*\\n*\\n길들일래 lion heart\\n* (**\\nOh, 널 길들일래 lion heart\\n**)\\n*\\n길들일래 lion heart\\n*\\n[Interlude: Tiffany, Hyoyeon, Seohyun, Sooyoung, Yoona, Yuri,\\nAll\\n]\\nLadies, y’all know what I’m talking about right? (\\nYeah!\\n)\\n모두 다 아니라 해도 좋을 때 있지 않아\\n사실 나만 좋음 됐지 뭐\\n바람보다 빠른 눈치로 (\\n맘은 뜨겁게\\n)\\n햇살처럼 따뜻한 말로 (\\n머린 차갑게\\n)\\n길들일래 너의 lion heart\\n사자 같은 너의 lion heart\\n[Outro: All,\\nSooyoung\\n,\\nYuri\\n,\\nTiffany\\n]\\n(오늘부터)\\n여기 와서 앉아\\n(오늘부터)\\n내 곁에만 있어\\n(오늘부터)\\n한 눈 팔지 말아\\nLion heart'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[-1]"
    ]
   }
  ],
